# iot-relic

./: NRLTP.md  README.md
src/arduino/sensor_nr_agent/: NRLTPClient.cpp  NRLTPClient.h  credentials.h  sensor_nr_agent.ino
src/nrltp-collector/: Cargo.toml
src/nrltp-collector/nrltp_server/: Cargo.toml
src/nrltp-collector/nrltp_server/src/: body.rs  datagram.rs  hunk.rs  lib.rs
src/nrltp-collector/src/: main.rs  nr_api.rs
